--- a/static/css/base.css
+++ b/static/css/base.css
@@ -27,6 +27,7 @@ a:hover {
 html,
 body {
     height: 100%;
+    background: url(Earth.png) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
