--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -26,6 +26,7 @@ a:hover {
 
 html,
 body {
+    background: url(Earth.png) no-repeat center center fixed;
     height: 100%;
     -webkit-background-size: cover;
     -moz-background-size: cover;
