--- a/templates/aroundtheworld.html
+++ b/templates/aroundtheworld.html
@@ -1,51 +1,42 @@
 {% extends "aroundtheworld_base.html" %}
 {% block body %}
-<div class='well'>
-    <div class='media'>
-        <a class='pull-left' href='/aroundtheworld/1'>
-            <img src="{{ url_for('static', filename='alex1.jpg') }}" height='96' widht='96'>
-        </a>
-        <div class='media-body'>
-            <h4 class='media-heading'>First Post Trial Run</h4>
-            <p>From the dense urban jungle of Kuala Lumpur to the pristine beaches of the Perhentian Islands, Malaysia is a beautiful and often underrated country.</p>
+<div class='container'>
+    <div class='well'>
+        <div class='media'>
+            <a class='pull-left' href='/aroundtheworld/1'>
+                <img src="{{ url_for('static', filename='alex1.jpg') }}" height='96' widht='96'>
+            </a>
+            <div class='media-body'>
+                <h4 class='media-heading'>First Post Trial Run</h4>
+                <p>From the dense urban jungle of Kuala Lumpur to the pristine beaches of the Perhentian Islands, Malaysia is a beautiful and often underrated country.</p>
+            </div>
         </div>
     </div>
-</div>
-<div class='well'>
-    <div class='media'>
-        <a class='pull-left' href='#'>
-            <img src="{{ url_for('static', filename='alex1.jpg') }}" height='96' widht='96'>
-        </a>
-        <div class='media-body'>
-            <h4 class='media-heading'>First Post Trial Run</h4>
-            <p>From the dense urban jungle of Kuala Lumpur to the pristine beaches of the Perhentian Islands, Malaysia is a beautiful and often underrated country.</p>
+    <div class='well'>
+        <div class='media'>
+            <a class='pull-left' href='#'>
+                <img src="{{ url_for('static', filename='alex1.jpg') }}" height='96' widht='96'>
+            </a>
+            <div class='media-body'>
+                <h4 class='media-heading'>First Post Trial Run</h4>
+                <p>From the dense urban jungle of Kuala Lumpur to the pristine beaches of the Perhentian Islands, Malaysia is a beautiful and often underrated country.</p>
+            </div>
         </div>
     </div>
-</div>
-<div class='well'>
-    <div class='media'>
-        <a class='pull-left' href='#'>
-            <img src="{{ url_for('static', filename='alex1.jpg') }}" height='96' widht='96'>
-        </a>
-        <div class='media-body'>
-            <h4 class='media-heading'>First Post Trial Run</h4>
-            <p>From the dense urban jungle of Kuala Lumpur to the pristine beaches of the Perhentian Islands, Malaysia is a beautiful and often underrated country.</p>
+    <div class='well'>
+        <div class='media'>
+            <a class='pull-left' href='#'>
+                <img src="{{ url_for('static', filename='alex1.jpg') }}" height='96' widht='96'>
+            </a>
+            <div class='media-body'>
+                <h4 class='media-heading'>First Post Trial Run</h4>
+                <p>From the dense urban jungle of Kuala Lumpur to the pristine beaches of the Perhentian Islands, Malaysia is a beautiful and often underrated country.</p>
+            </div>
         </div>
     </div>
+    <ul class="pager">
+        <li class="previous disabled"><a href="/aroundtheworld"><span aria-hidden="true">&larr;</span> Older</a></li>
+        <li class="next"><a href="/aroundtheworld1">Newer <span aria-hidden="true">&rarr;</span></a></li>
+    </ul>
 </div>
-<div class='well'>
-    <div class='media'>
-        <a class='pull-left' href='#'>
-            <img src="{{ url_for('static', filename='alex1.jpg') }}" height='96' widht='96'>
-        </a>
-        <div class='media-body'>
-            <h4 class='media-heading'>First Post Trial Run</h4>
-            <p>From the dense urban jungle of Kuala Lumpur to the pristine beaches of the Perhentian Islands, Malaysia is a beautiful and often underrated country.</p>
-        </div>
-    </div>
-</div>
-<ul class="pager">
-    <li class="previous disabled"><a href="/aroundtheworld"><span aria-hidden="true">&larr;</span> Older</a></li>
-    <li class="next"><a href="/aroundtheworld1">Newer <span aria-hidden="true">&rarr;</span></a></li>
-</ul>
 {% endblock %}
