--- a/templates/base.html
+++ b/templates/base.html
@@ -27,26 +27,26 @@
         <div class='container'>
             <div class="jumbotron">
                 <div class="row">
-                    <div class="col-xs-6 col-md-3">
+                    <div class="col-xs-6">
                             <img src="{{ url_for('static', filename='alex256.jpg') }}" height="266">
                     </div>
-                    <div class="col-xs-6 col-md-3">
-                        <div class="col-xs-6 col-md-3">
+                    <div class="col-xs-6">
+                        <div class="col-xs-6">
                             <a href="https://github.com/rushing3" class="thumbnail">
                                 <img src="{{ url_for('static', filename='git.png') }}" width="256">
                             </a>
                         </div>
-                        <div class="col-xs-6 col-md-3">
+                        <div class="col-xs-6">
                             <a href="https://www.instagram.com/rush95/" class="thumbnail">
                                 <img src="{{ url_for('static', filename='insta.png') }}" width="256">
                             </a>
                         </div>
-                        <div class="col-xs-6 col-md-3">
+                        <div class="col-xs-6">
                             <a href="https://www.linkedin.com/in/alexander-rushing-97987184" class="thumbnail">
                                 <img src="{{ url_for('static', filename='in.png') }}" width="256">
                             </a>
                         </div>
-                        <div class="col-xs-6 col-md-3">
+                        <div class="col-xs-6">
                             <a href="#" class="thumbnail">
                                 <img src="{{ url_for('static', filename='resume.png') }}" width="256">
                             </a>
