--- a/templates/base.html
+++ b/templates/base.html
@@ -47,12 +47,19 @@
                             </a>
                         </div>
                         <div class="col-xs-6">
-                            <a href="#" class="thumbnail">
+                            <a href="/resume" class="thumbnail">
                                 <img src="{{ url_for('static', filename='resume.png') }}" width="256">
                             </a>
                         </div>
                     </div>
                 </div>
+                <hr>
+                <p>
+                Hey there, my name is Alex and welcome to my site.
+                I'm currently a Computer Science student at Georgia Tech.
+                In my free time I enjoy attending hackathons, snowboarding,
+                hiking, travelling to new places, and eating good food.
+                </p>
             </div>
         </div>
     </body>
