--- a/templates/base.html
+++ b/templates/base.html
@@ -26,40 +26,7 @@
     <body>
         <div class='container'>
             <div class="jumbotron">
-                <div class="row">
-                    <div class="col-xs-6">
-                            <img src="{{ url_for('static', filename='alex256.jpg') }}" height="266">
-                    </div>
-                    <div class="col-xs-6">
-                        <div class="col-xs-6">
-                            <a href="https://github.com/rushing3" class="thumbnail">
-                                <img src="{{ url_for('static', filename='git.png') }}" width="256">
-                            </a>
-                        </div>
-                        <div class="col-xs-6">
-                            <a href="https://www.instagram.com/rush95/" class="thumbnail">
-                                <img src="{{ url_for('static', filename='insta.png') }}" width="256">
-                            </a>
-                        </div>
-                        <div class="col-xs-6">
-                            <a href="https://www.linkedin.com/in/alexander-rushing-97987184" class="thumbnail">
-                                <img src="{{ url_for('static', filename='in.png') }}" width="256">
-                            </a>
-                        </div>
-                        <div class="col-xs-6">
-                            <a href="/resume" class="thumbnail">
-                                <img src="{{ url_for('static', filename='resume.png') }}" width="256">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <hr>
-                <p>
-                Hey there, my name is Alex and welcome to my site.
-                I'm currently a Computer Science student at Georgia Tech.
-                In my free time I enjoy attending hackathons, snowboarding,
-                hiking, travelling to new places, and eating good food.
-                </p>
+            {% block body %}{% endblock %}
             </div>
         </div>
     </body>
